# rosetta

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ELEVATED_SPEECH.md  ELEVATOR_SPEECH_LEADESHIP.md  FAQ.md  INSTALLATION.md  MCPs.md  OVERVIEW.md  PLUGINS.md  QUICKSTART.md  README.md  REVIEW.md  SECURITY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  gain.json  llms-full.txt  mypy.ini  refsrc-examples.md  requirements.txt  run-tests.sh  validate-types.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS
.github/plugin/: marketplace.json
.github/prompts/: prompt-comparison.md
.github/workflows/: pages.yml  publish-ims-mcp.yml  publish-instructions.yml  publish-rosetta-cli.yml  publish-rosetta-mcp.yml  publish-rosettify-plugins.yml  publish-rosettify-prompts.yml  publish-rosettify.yml  rosetta-mcp-dockerhub.yaml  validate-prompts.yml  validate-test-cases.yml
agents/: IMPLEMENTATION.md  MEMORY.md  init-workspace-flow-state.md  workflow-doc-author-template-subagent.md  workflow-doc-reviewer-template-subagent.md
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  AUTHENTICATION.md  CODEMAP.md  DEPENDENCIES.md  TECHSTACK.md  TESTING-PLUGINS.md  TODO.md  hooks-verify-run-logs.md  hooks-verify.md
docs/PATTERNS/: CHANGES.md  INDEX.md  command-pattern-cli.md  document-bundling.md  dual-backend-store.md  env-backed-dataclass-config.md  layered-instruction-architecture.md  md5-change-detection.md  oauth-proxy-pattern.md  policy-based-authorization.md  pre-commit-plugin-sync.md  protocol-based-typing.md  redis-schema-migrations.md  shell-proxy-pattern.md  tag-based-retrieval.md  ttl-cache-pattern.md  vfs-resource-paths.md
docs/definitions/: skills.md  workflows.md
docs/hooks/: claude.md  codex.md  copilot-cli-8abb87fa-events.jsonl  copilot.md  cursor-run3-logs.txt  cursor.md  devin-cli.md  e946202d-1afd-4ae7-9876-b7cfd1b60a6c.jsonl  f46082a6-3b68-4dd7-8073-ac1cff42344d.jsonl  rollout-2026-06-26T19-11-51-019f0634-3175-7702-b55c-e256f2966840.jsonl  split-logs.js  tester.js  windsurf-logs.txt  windsurf.md
docs/manual-tests/: api-aqa-flow.md  testgen-flow.md  ui-aqa-flow.md
docs/qa/: 2026-05-19-adapter-normalization-report.md
docs/requirements/: CHANGES.md  INDEX.md
docs/reviews/: DOC-STRUCTURE-PLAN.md
docs/schemas/: agent.md  phase.md  skill.md  workflow.md
docs/stories/: bootstrap-removed.md  old-plugin-generator-outputs.md  reduce-bootstrap.md  skills-refactoring.md
docs/web/: README.md  _config.yml  index.md  roadmap.md
helm-charts/rosetta-mcp-server/: Chart.yaml  README.md  values.yaml
hooks/: package-lock.json  package.json  tsconfig.json
hooks/scripts/: build-bundles.mjs
hooks/tests/: MANUAL-TEST-CASES.md  adapter.claude-code.test.ts  (+8 more)
ims-mcp-server/: pyproject.toml
rosetta-cli/: pyproject.toml
rosetta-cli/rosetta_cli/: ragflow_client.py
rosetta-cli/rosetta_cli/services/: document_data.py
rosetta-mcp-server/: pyproject.toml
rosettify/: .gitignore  package-lock.json  package.json  vitest.config.ts
scripts/: bump_versions.sh  plugin_generator.py  pre_commit.py
src/ims-mcp-server/: .dockerignore  .gitignore  .pypirc.example  DEBUGGING.md  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml
src/ims-mcp-server/ims_mcp/: __init__.py  __main__.py  config.py  constants.py  context.py  migrations.py  server.py  tool_prompts.py  typing_utils.py
src/ims-mcp-server/ims_mcp/analytics/: __init__.py  tracker.py  user_context.py
src/ims-mcp-server/ims_mcp/auth/: __init__.py  loopback_redirect_fix.py  oauth.py  offline_refresh_fix.py
src/ims-mcp-server/ims_mcp/clients/: __init__.py  doc_cache.py  document.py  ragflow.py
src/ims-mcp-server/ims_mcp/services/: __init__.py  _ragflow_team_api.py  authorizer.py  bundler.py  invite.py  keyword_search.py  plan_store.py  query_builder.py
src/ims-mcp-server/ims_mcp/tools/: feedback.py  instructions.py  plan_manager.py  projects.py  resources.py  validation.py
src/ims-mcp-server/tests/: conftest.py  test_analytics.py  test_authorizer.py  test_bundler_and_query_builder.py  test_cache_ttl.py  test_config.py  test_dataset_lookup.py  test_document_client.py  test_feedback_service.py  test_healthz.py  test_inflight_watchdog.py  test_instructions.py  test_invite.py  test_keyword_search.py  test_loop_offload.py  test_migrations.py  test_oauth.py  test_origin_middleware.py  test_plan_manager.py  test_prompts.py  test_request_logging_middleware.py  test_requests_timeout_patch.py  test_resources.py  test_tool_contracts.py  test_tracing.py  test_validation.py
src/ims-mcp-server/validation/: verify_mcp.py
src/rosetta-mcp-server/: README.md  pyproject.toml
(+1202 files in other folders)
