[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosetta-cli"
version = "2.0.12"
description = "Rosetta CLI for publishing knowledge base content to RAGFlow"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "Rosetta Team", email = "rosetta-support@griddynamics.com"}
]
keywords = ["rosetta", "ragflow", "cli", "knowledge-base", "publishing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "ragflow-sdk>=0.23.1,<0.25.0",
    "requests>=2.31.0,<3.0.0",
    "tqdm>=4.67.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/griddynamics/rosetta"
Discord = "https://discord.gg/QzZ2cWg36g"
Website = "https://griddynamics.github.io/rosetta/"
Support = "https://github.com/griddynamics/rosetta/issues"

[project.scripts]
rosetta-cli = "rosetta_cli.cli:main"

[tool.setuptools.packages.find]
include = ["rosetta_cli", "rosetta_cli.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
