[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-mcp"
version = "2.0.25"
description = "Model Context Protocol server for Rosetta (Instruction Management System)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Rosetta Team", email = "rosetta-support@griddynamics.com"}
]
keywords = ["mcp", "ims", "retrieval", "rag", "ai", "llm", "model-context-protocol", "knowledge-base"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ragflow-sdk>=0.25.1,<0.26.0",
    "mcp>=1.26.0,<2.0.0",
    "fastmcp>=3.4.0,<4",
    "posthog>=7.0.0,<8.0.0",
    "cryptography>=43.0.0",
    "uuid7-standard>=1.0.0,<2.0.0",
    "cachetools>=5.5.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
redis = [
    "py-key-value-aio[redis]>=0.4.4,<0.5.0",
]

[project.urls]
Homepage = "https://github.com/griddynamics/rosetta"
Website = "https://griddynamics.github.io/rosetta/"
Support = "https://github.com/griddynamics/rosetta/issues"

[project.scripts]
ims-mcp = "ims_mcp.server:main"

[tool.setuptools]
packages = [
    "ims_mcp",
    "ims_mcp.auth",
    "ims_mcp.clients",
    "ims_mcp.services",
    "ims_mcp.analytics",
    "ims_mcp.tools",
]

[tool.setuptools.package-data]
ims_mcp = ["py.typed", "resources/*.png"]

[tool.uv]
override-dependencies = [
    "tiktoken>=0.12.0",
]
