[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosetta-mcp"
version = "2.0.25"
description = "Model Context Protocol server for Rosetta (Enterprise Engineering Governance and Instructions Management System)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Rosetta Team", email = "rosetta-support@griddynamics.com"}
]
keywords = ["mcp", "rosetta", "retrieval", "rag", "ai", "llm", "model-context-protocol", "knowledge-base"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ims-mcp==2.0.25",
]

[project.urls]
Homepage = "https://github.com/griddynamics/rosetta"
Website = "https://griddynamics.github.io/rosetta/"
Support = "https://github.com/griddynamics/rosetta/issues"

[project.scripts]
rosetta-mcp = "ims_mcp.server:main"
